# hyper-lang

./: Cargo.toml  hyper.ungram  joxpox.rs
crates/ast/: Cargo.toml
crates/ast/src/: func.rs  lib.rs  nodes.rs  support.rs  tokens.rs  traits.rs  validation.rs  view.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/lexer/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  grammar.rs  lib.rs  parser.rs  syntax_error.rs  tests.rs  token_set.rs  token_source.rs  tree_sink.rs
crates/parser/src/grammar/: expr.rs  func.rs  item.rs  param.rs  stmt.rs  view.rs  xml.rs
crates/parser/src/parser/: marker.rs
crates/parser/test_data/err/: 0001_state_in_func.hyper
crates/parser/test_data/ok/: 0000_empty.hast  0001_empty_func.hast  0002_empty_view.hast  0003_func_with_return.hast  0004_binary_expr.hast  0004_binary_expr.hyper  0005_unary_expr.hast  0005_unary_expr.hyper  0006_let_statement.hast  0006_let_statement.hyper  0007_let_mut_statement.hast  0007_let_mut_statement.hyper  0008_state_statement.hast  0008_state_statement.hyper  0009_view_self_closing.hast  0009_view_self_closing.hyper  0009_xml_self_closing.hast  0010_view_xml_attributes.hast  0010_view_xml_attributes.hyper  0010_xml_attributes.hast  0010_xml_attributes.hyper  0011_xml_element.hast  0011_xml_element.hyper  0012_nested_xml_elements.hast  0012_nested_xml_elements.hyper  0013_custom_xml_element.hast  0013_custom_xml_element.hyper  func.hast  view.hast  view.hyper
crates/syntax/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: ast.rs  codegen.rs  main.rs  syntax_kinds.rs
(+8 files in other folders)
