[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rowan = "0.15.0"
lexer = { path = "../lexer" }
syntax = { path = "../syntax" }
text-size = "1.1.0"
drop_bomb = "0.1.5"
expect-test = "1.1.0"
